@@ -14,6 +14,8 @@ import java.lang.reflect.Constructor;
 import java.net.HttpURLConnection;
 import java.net.URI;
 import java.net.URL;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Properties;
@@ -299,31 +301,15 @@ public class ApplicationController extends DefaultController
                 Properties docProps = new Properties();
                 docProps .setProperty( "as.template", "true" );
                 String path = action .substring( "openURL-" .length() );
-                final String vzomeExt = ".vzome";
-                path = removeProxyFileExtension( path, vzomeExt);
-                URI uri = new URI( path );
-                // In case path is an encoded file URI (e.g. whitespace encoded as %20),
-                // show the decoded local file name and path in the title bar.
-                // This occurs when an associated vZome file is opened in Windows by double clicking on it.
-                String title = ( uri.getScheme().equals("file") )
-                        ? (new File(uri)).getPath()
-                                : uri.getPath();
-                docProps .setProperty( "window.title", title );
-//                if ( path .toLowerCase() .endsWith( vzomeExt ) ) {
+                docProps .setProperty( "window.title", path );
+                URL url = new URL( path );
                 InputStream bytes= null;
-                if( uri.getScheme().equals("file") ) {
-                    // In Windows, double clicking on an associated vZome file uses the file protocol, not http. 
-                    bytes = new FileInputStream(new File(uri));
-                } else {
-                    URL url = uri .toURL();
-                    HttpURLConnection conn = (HttpURLConnection) url .openConnection();
-                    // See https://stackoverflow.com/questions/1884230/urlconnection-doesnt-follow-redirect
-                    //  This won't switch protocols, but seems to work otherwise.
-                    conn .setInstanceFollowRedirects( true );
-                    bytes = conn .getInputStream();
-                }
+                HttpURLConnection conn = (HttpURLConnection) url .openConnection();
+                // See https://stackoverflow.com/questions/1884230/urlconnection-doesnt-follow-redirect
+                //  This won't switch protocols, but seems to work otherwise.
+                conn .setInstanceFollowRedirects( true );
+                bytes = conn .getInputStream();
                 loadDocumentController( path, bytes, docProps );
-//                }
             }
             else 
             {
@@ -334,45 +320,28 @@ public class ApplicationController extends DefaultController
         }
     }
 
-    /**
-     * 
-     * @param path is the file name of the original file specified to be opened
-     * @param desiredExt expected file extension (e.g. ".vzome")
-     * @return If {@code desiredExt} is found in the path, but with an additional extension appended
-     * then the extra extension will be removed, leaving the correct extension. 
-     * Otherwise, {@code path} will be returned unchanged.
-     * 
-     * A typical use case is when the user selects a file named "foo.vzome.png" as a "proxy" for the file foo.vzome.
-     * In this case, assumong that ".vzome" is specified as the {@code desiredExt},
-     * then "foo.vzome" would be returned by this method. This allows the user to select an image file 
-     * which they can preview, as a "proxy" which will actually attempt to open the corresponding vzome file.
-     * 
-     * This method specifically does NOT replace a file's extension with a diffferent one, 
-     * but simply removes any additional extension from the end of the path 
-     * to reveal the emedded {@code desiredExt} if it exists.
-     * 
-     * Note that such a "proxy" image file with a ".vome.png" extension is generated automatically 
-     * upon saving a vZome file by adding "save.exports=capture.png" to .vZome.prefs.
-     */
-    private String removeProxyFileExtension(String path, String desiredExt) {
-        if(!desiredExt.startsWith(".")) {
-            desiredExt = "." + desiredExt;
-        }
-        int pos = path.toLowerCase().lastIndexOf(desiredExt.toLowerCase() + ".");
-        if(pos > 0) {
-            return path.substring(0, pos += desiredExt.length() );
-        }
-        return path;
-    }
-
     @Override
     public void doFileAction( String command, File file )
     {
         if ( file != null )
         {
             Properties docProps = new Properties();
-            file = new File(removeProxyFileExtension( file.getAbsolutePath(), ".vzome"));
-            String path = file .getAbsolutePath();
+            Path filePath = file .toPath();
+            String path = filePath .toAbsolutePath() .toString();
+
+            int pos = path .toLowerCase() .lastIndexOf( ".vzome." );
+            if( pos > 0 ) {
+                /*
+                 * This allows the user to select a file named "foo.vzome.png" that they can preview,
+                 * as a "proxy" that will actually attempt to open the corresponding vzome file.
+                 * 
+                 * Note that such a "proxy" image file with a ".vome.png" extension is generated automatically 
+                 * upon saving a vZome file by adding "save.exports=capture.png" to .vZome.prefs.
+                 */
+                path = path.substring( 0, pos += 6 );
+                file = Paths .get( path ) .toFile();
+            }
+
             docProps .setProperty( "window.title", path );
             switch ( command ) {
 
